Fixes some bugs and add better validation for accountancy security
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1528 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -2214,6 +2214,7 @@ eng:
         not_a_number: '{{attribute}} is not a number'
         odd: '{{attribute}} must be odd'
         #>posterior: 'La date {{attribute}} doit être postérieure à {{to}}'
+        #>record_has_been_already_validated: 'La pièce a été validée et ne peut plus être modifiée'
         taken: '{{attribute}} has already been taken'
         too_long: '{{attribute}} is too long (maximum is {{count}} characters)'
         too_short: '{{attribute}} is too short (minimum is {{count}} characters)'
