--- a/config/locales/eng/notifications.yml
+++ b/config/locales/eng/notifications.yml
@@ -2,7 +2,7 @@ eng:
   notifications:
     #>access_denied: 'Vous n''avez pas le droit d''accéder à cette page. {{reason}} ({{url}})'
     #>accountizing_is_finished: 'La bascule en comptabilité est finie.'
-    #>accountizing_works_only_with_sales_invoices: 'La bascule en comptabilité ne peut se faire actuellement que pour les factures de vente.'
+    #>accountizing_works_only_with: 'La bascule en comptabilité ne peut se faire actuellement que pour : {{list}}.'
     #>bad_file: 'Le fichier ne semble pas correspondre.'
     #>cannot_delete_entity: 'Il n''est pas possible de supprimer cette fiche car elle possède un historique comptable'
     #>cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même'
@@ -11,23 +11,27 @@ eng:
     #>changes_have_not_been_reflected: 'Les changements n''ont pas pu être correctement répercutés sur l''état des stocks actuel'
     #>closed_financialyears: 'L''exercice a été correctement clôturé'
     #>columns_are_already_uses: 'Une ou plusieurs colonnes à importer sont sélectionnées plusieurs fois'
+    draft_entries_are_validated:
+      #>one: 'La pièce a été validée et sortie du brouillard'
+      #>other: 'Les {{count}} pièces ont été validées et sorties du brouillard'
+      #>zero: 'Aucune pièce n''a été validée'
     #>entity_columns_are_needed: 'Vous devez spécifier au moins une colonne pour la personne et notamment son nom.'
     #>exception_raised: 'Une erreur est survenue durant le traitement : {{message}}'
     #>expired_session: 'Session expirée. Veuillez vous reconnecter.'
     #>fails_to_extract_listing: 'L''extraction n''a pas pu s''effectuer : {{message}}'
-    #>import_succeeded: 'Vos données ont été correctement importées '
+    #>import_succeeded: 'Vos données ont été correctement importées'
     #>importation_cancelled: 'Vos données n''ont été pas été importées. L''importation a été annulée'
     #>importation_finished: 'L''importation est terminée.'
     #>impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
     #>impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat'
     #>invalid_file_nature: 'Type de fichier invalide'
     #>journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.'
+    #>journal_record_already_validated: 'La pièce a déjà été validée et ne peut plus être modifiée'
     #>journal_record_has_been_saved: 'La pièce N°{{number}} a été enregistrée correctement'
     #>journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.'
     #>mails_are_sent: 'Les courriels ont été envoyés'
     #>need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
-    #>need_bank_account_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
-    #>need_cash_to_record_statements: '(((NEED_CASH_TO_RECORD_STATEMENTS)))'
+    #>need_cash_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
     #>need_closed_financialyear_to_declaration: 'Vous devez avoir un exercice clôturé pour créer une déclaration de TVA.'
     #>need_company_code_to_login: 'Vous devez sélectionner votre société pour pouvoir vous connecter avec ce nom d''utilisateur'
     #>need_entries_to_point: 'Aucune écriture n''a été trouvé pour la période du relevé bancaire.'
