--- a/config/locales/fra/pack.accountancy.yml
+++ b/config/locales/fra/pack.accountancy.yml
@@ -30,30 +30,10 @@ fra:
       account_update:
         title: 'Modifier le compte : {{number}} - {{name}}'
       accountize:
-        cashed_payments: 'Inclure les règlements non encaissés' #!
-        dont_save_in_draft: 'Ne pas sauvegarder dans le brouillard'
-        draft_generate: 'Enregistrer dans le brouillard' #!
-        invoices_count: 'Nombre de factures de vente à comptabiliser'
-        nb_invoices: 
-          one: '1 facture enregistrée'
-          other: '{{count}} factures enregistrées'
-          zero: 'Aucune facture enregistrée'
-        nb_payments: 
-          one: '1 règlement enregistrée'
-          other: '{{count}} règlements enregistrés'
-          zero: 'Aucun règlement enregistré'
-        nb_purchases: 
-          one: '1 achat enregistrée'
-          other: '{{count}} achats enregistrés'
-          zero: 'Aucun achat enregistré'
-        nb_sales: 
-          one: '1 vente enregistrée'
-          other: '{{count}} ventes enregistrées'
-          zero: 'Aucune vente enregistrée'
-        nb_transfers: 
-          one: '1 transfert enregistrée'
-          other: '{{count}} transferts enregistrés'
-          zero: 'Aucun transfert enregistré'
+        invoices_count: 'Nombre de factures de vente à comptabiliser' #!
+        purchase_payments_count: 'Nombre de règlement d''achat à comptabiliser' #!
+        sale_payments_count: 'Nombre de règlement de vente à comptabiliser' #!
+        save_in_draft: 'Sauvegarder dans le brouillard'
         select_date_generation: 'Date limite d''intégration'
         title: 'Bascule comptable'
       accounts:
@@ -123,10 +103,9 @@ fra:
         export: 'Exportation de documents'
         print: 'Impression de documents'
         title: 'Impression, exportation'
-      # No defined action for this view !!!
       draft_entries:
-        accountize: 'Comptabiliser les écritures' #!
-        title: 'Listing des écritures du brouillard'
+        title: 'Brouillard'
+        validate_selected_entries: 'Valider les écritures sélectionnées'
       # No defined action for this view !!!
       # Unfound view ./app/views/accountancy/entries
       entries:
@@ -168,6 +147,7 @@ fra:
         financialyear_create: 'Ouvrir un nouvel exercice comptable'
         title: 'Exercices comptables'
       index:
+        journals: 'Journaux'
         nb_entries: 
           one: '1 écriture'
           other: '{{count}} écritures'
@@ -177,13 +157,9 @@ fra:
         balance: 'Soldes' #!
         credit: 'Crédit' #!
         debit: 'Débit' #!
-        filter_entries_with: 'Filtrer les écritures avec' #!
-        interval: 'Intervalle'
         journal_update: 'Modifier le journal'
-        manual_period: 'du {{start}} au {{finish}}'
-        period: 'Période'
         search: 'Rechercher des pièces/écritures' #!
-        title: '{{name}} ({{code}})'
+        title: 'Journal : {{name}} ({{code}})'
         totals: 'Totaux' #!
         #>journal_record_create: # Potentially missing translation
       journal_close:
@@ -210,9 +186,9 @@ fra:
       journal_update:
         title: 'Modifier le journal : {{name}}'
       _journals:
-        draft: 'Brouillard'
-        journal_detail: 'Cloturé au {{closed_on}}'
-        journal_name: '{{name}}'
+        draft_entries: 'Brouillard'
+        journal_detail: 'Cloturé au {{closed_on}}' #!
+        journal_name: '{{name}}' #!
       journals:
         title: 'Journaux'
         #>journal_create: # Potentially missing translation
@@ -220,6 +196,11 @@ fra:
       _journals_find:
         journal_id: 'Numéro de journal'
         journal_name: 'Nom du journal'
+      _journals_search:
+        filter_entries_with: 'Filtrer les écritures avec' #!
+        interval: 'Intervalle'
+        manual_period: 'du {{start}} au {{finish}}'
+        period: 'Période'
       lettering:
         lettering_account_client: 'Lettrage des comptes clients'
         lettering_account_supplier: 'Lettrage des comptes fournisseurs'
