--- a/config/locales/fra/help/accountancy-accountize.txt
+++ b/config/locales/fra/help/accountancy-accountize.txt
@@ -3,3 +3,5 @@
 Si vous n'avez pas activé la bascule automatique des opérations commerciales dans la [[>company/configure|configuration de votre société]], vous pouvez utilisez la bascule manuelle pour créer automatiquement les pièces et les écritures associées à vos opérations.
 
 Vous choisissez jusqu'à quelle date vous voulez comptabiliser les opérations et une fois sélectionné vous validez si tout vous semble correct.
+
+!!! **La bascule comptable manuelle ne prend pas en compte les changements qui ont été effectués sur des pièces déjà comptabilisées**. La comptabilisation en mode automatique permet quant à elle de faire les modifications en comptabilité au fur et à mesure.
