--- a/config/locales/fra/help/accountancy-journal_close.txt
+++ b/config/locales/fra/help/accountancy-journal_close.txt
@@ -5,3 +5,6 @@ Sélectionnez la date de clôture puis confirmer l'opération à l'aide du bouto
 Une fois la clotûre effectuée, il est possible d'effectuer de nouvelles opérations (déclaration de TVA, cloture d'exercice...)
 
   
+L'opération ne sera possible que si les conditions suivantes sont réunies :
+  * les pièces du journal doivent être **validées et équilibrées** pour la période concernées.
+  * la nouvelle **date de clôture du journal** doit être **antérieure** à la date du jour.
