--- a/config/locales/fra/help/accountancy-journals.txt
+++ b/config/locales/fra/help/accountancy-journals.txt
@@ -6,10 +6,8 @@ Il contient toutes les pièces et écritures comptables qui sont la base de la c
 
 
 ===== Gestion d'un journal comptable =====
-Pour utiliser un journal comptable (durant la [[accountancy-entries|Gestion des écritures]], la [[accountancy-bank_accounts|Gestion d'un compte bancaire]]), commencer par le [[accountancy-journals_create|créer]]. Le journal crée apparaîtra dans le tableau des journaux. Par la suite, il vous sera possible de le modifier [[accountancy-journals_update|{{theme:buttons/update.png|modifier}}]], le supprimer [[accountancy-journals_delete|{{theme:buttons/delete.png|supprimer}}]](si il existe des écritures dans le journal) ou même de [[accountancy-entries_consult|consulter ses écritures]] pour l'exercice en cours.
-Dans le cas où vous souhaitez [[accountancy-journal_close|clore]] le journal, l'opération ne sera possible que si les conditions suivantes sont réunies:
-les **écritures** du journal doivent être **équilibrées**.
-la précédente **date de clôture du journal** doit être **antérieure** à la date du jour.
 
+Il est possible de consulter toutes les écritures à travers tous les exercices en utilisant les filtres sur les périodes. Par défaut, les écritrues sont filtrées sur l'exercice en cours.
+Les journaux sont visibles dans plusieurs modes. Le mode //Brouillard// permet de consulter les écritures en mode brouillard du journal seulement. 
 
 
