--- a/config/locales/jpn/general.yml
+++ b/config/locales/jpn/general.yml
@@ -1,4 +1,5 @@
 jpn:
+  csv: 'CSV' #!
   date:
     abbr_day_names: ['日', '月', '火', '水', '木', '金', '土']
     abbr_month_names: ['', '一', '二', '三', '四', '五', '六', '七', '八', '九', '十', '十一', '十二']
@@ -54,6 +55,9 @@ jpn:
       #>true_value: 'VRAI'
       #>xcsv: 'CSV pour Excel'
     #>no_records: 'Aucun enregistrement'
+  error: '間違い' #!
+  export:
+  false_value: 'false' #!
   general:
     add: '加える'
     apply: '適用する'
@@ -73,14 +77,7 @@ jpn:
     #>down: 'Descendre'
     #>duplicate: 'Dupliquer'
     #>duration: '{{hours}}h {{minutes}}min'
-    dyta:  #!
-  export: #!
-    csv: 'CSV' #!
-    false_value: 'false' #!
-    title: '輸出' #!
-    true_value: 'true' #!
-    xcsv: 'Excel CSV' #!
- #!
+    dyta:
     #>edit: 'Modifier'
     #>example: 'Exemple&nbsp;: {{value}}'
     #>export: 'Exporter'
@@ -92,7 +89,7 @@ jpn:
     #>from: 'À partir du'
     #>hint: 'Astuce&nbsp;: {{value}}'
     #>import: 'Importer'
-    indicator: 'ボード'
+    #>indicator: 'Tableau de bord'
     #>info: 'Information&nbsp;: {{value}}'
     #>letter: 'Lettrer'
     #>letter_conclusion: ' Veuillez agréer, Chère Madame, Cher Monsieur, l''expression de mes salutations distinguées.'
@@ -105,12 +102,12 @@ jpn:
     #>next: 'Suivant'
     #>no_records: 'Pas d''enregistrements'
     notifications:
-      error: '間違い'
-      information: '情報'
-      success: '成功しました'
-      warning: '危ない!'
+      #>error: 'Erreur'
+      #>information: 'Information'
+      #>success: 'Opération réalisée avec succès'
+      #>warning: 'Attention!'
     #>previous: 'Précédent'
-    print: '印刷する'
+    #>print: 'Imprimer'
     #>record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement.'
     #>record_has_not_been_removed: 'L''enregistrement n''a pu être supprimé.'
     #>reflect: 'Refléter'
@@ -132,6 +129,8 @@ jpn:
     #>validate: 'Valider'
     #>view: 'Affichage'
     #>y: 'oui'
+  indicator: 'ボード' #!
+  information: '情報' #!
   models:
     account:
       #>default_account_name: 'Compte comptable {{number}}'
@@ -540,6 +539,7 @@ jpn:
     user:
       #>no_right_defined_for_this_part_of_the_application: 'Aucun droit défini pour cette partie de l''application : {{controller}}/{{action}}'
       #>no_right_defined_for_this_part_of_the_application_and_this_user: 'Vous n''avez pas accès à cette partie de l''application'
+  notifications:
   number:
     currency:
       format:
@@ -562,6 +562,8 @@ jpn:
     precision:
       format:
         #>delimiter: ''
+  print: '印刷する' #!
+  success: '成功しました' #!
   support:
     array:
       #>last_word_connector: ' et '
@@ -576,6 +578,8 @@ jpn:
       #>long: '%B %d, %Y %H:%M'
       #>short: '%d %b %H:%M'
     pm: 'pm'
+  title: '輸出' #!
+  true_value: 'true' #!
   views:
     shared:
       _entities_search:
@@ -595,3 +599,5 @@ jpn:
         #>stock_transfers: 'Transferts et pertes'
         #>stocks_tasks: 'Stocks'
         #>tools: 'Outils'
+  warning: '危ない!' #!
+  xcsv: 'Excel CSV' #!
