--- a/config/locales/spa/general.yml
+++ b/config/locales/spa/general.yml
@@ -1,4 +1,5 @@
 spa:
+  csv: 'CSV' #!
   date:
     abbr_day_names: ['Do', 'Lu', 'Ma', 'Mi', 'Ju', 'Vi', 'Sá']
     abbr_month_names: ['', 'ene', 'feb', 'mar', 'abr', 'may', 'jun', 'jul', 'ago', 'sep', 'oct', 'nov', 'dic']
@@ -54,6 +55,9 @@ spa:
       #>true_value: 'VRAI'
       #>xcsv: 'CSV pour Excel'
     #>no_records: 'Aucun enregistrement'
+  export:
+  false_value: 'falso' #!
+  format_date:
   general:
     #>add: 'Ajouter'
     #>apply: 'Appliquer'
@@ -73,14 +77,7 @@ spa:
     #>down: 'Descendre'
     #>duplicate: 'Dupliquer'
     #>duration: '{{hours}}h {{minutes}}min'
-    dyta:  #!
-  export: #!
-    csv: 'CSV' #!
-    false_value: 'falso' #!
-    title: 'Exportar' #!
-    true_value: 'verdadero' #!
-    xcsv: 'CSV por Excel' #!
- #!
+    dyta:
     #>edit: 'Modifier'
     #>example: 'Exemple&nbsp;: {{value}}'
     #>export: 'Exporter'
@@ -88,7 +85,7 @@ spa:
     #>filter: 'Filtrer'
     #>finish: 'Terminer'
     format_date:
-      iso: '(AAAA-MM-JJ)'
+      #>iso: '(AAAA-MM-JJ)'
     #>from: 'À partir du'
     #>hint: 'Astuce&nbsp;: {{value}}'
     #>import: 'Importer'
@@ -132,6 +129,7 @@ spa:
     #>validate: 'Valider'
     #>view: 'Affichage'
     #>y: 'oui'
+  iso: '(AAAA-MM-JJ)' #!
   models:
     account:
       #>default_account_name: 'Compte comptable {{number}}'
@@ -576,6 +574,8 @@ spa:
       #>long: '%B %d, %Y %H:%M'
       #>short: '%d %b %H:%M'
     pm: 'pm'
+  title: 'Exportar' #!
+  true_value: 'verdadero' #!
   views:
     shared:
       _entities_search:
@@ -595,3 +595,4 @@ spa:
         #>stock_transfers: 'Transferts et pertes'
         #>stocks_tasks: 'Stocks'
         #>tools: 'Outils'
+  xcsv: 'CSV por Excel' #!
