--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -660,6 +660,7 @@ fra:
         name: 'Nom'
         prices: 'Prix'
         rate: 'Taux de change'
+        symbol: 'Symbole'
         updated_at: 'Mis à jour le'
         updater: 'Modificateur'
         updater_id: 'Modificateur'
@@ -876,6 +877,9 @@ fra:
         embanker: 'Encaisseur'
         embanker_id: 'Encaisseur'
         id: 'ID'
+        journal_record: 'Pièces comptables'
+        journal_record_id: 'Pièce comptable'
+        journal_records: 'Pièces comptables'
         lock_version: 'Version'
         locked: 'Verrouillé'
         mode: 'Type de paiement'
@@ -931,7 +935,7 @@ fra:
         lock_version: 'Version'
         locked: 'Verrouillé'
         mandates: 'Responsabilités'
-        max_reduction_rate: 'Taux de réduction'
+        max_reduction_rate: 'Taux de réduction' #?
         name: 'Nom'
         nature: 'Type'
         nature_id: 'Type'
@@ -1860,7 +1864,7 @@ fra:
         created_at: 'Créé le'
         creator: 'Créateur'
         creator_id: 'Créateur'
-        draft_mode: 'Mode brouillard'
+        draft_mode: 'Mode brouillard' #?
         id: 'ID'
         lock_version: 'Version'
         name: 'Nom'
@@ -1982,7 +1986,7 @@ fra:
         creator: 'Créateur'
         creator_id: 'Créateur'
         delivery_lines: 'Lignes de livraison'
-        discount: 'Réduction (en %)'
+        discount: 'Réduction (en %)' #?
         entity: 'Personne'
         entity_id: 'Personne'
         id: 'ID'
@@ -2004,6 +2008,7 @@ fra:
         reduction: 'Ligne de réduction'
         reduction_origin: 'Ligne soumise à réduction'
         reduction_origin_id: 'Ligne soumise à réduction'
+        reduction_percent: 'Pourcentage de réduction'
         reductions: 'Lignes de réductions'
         tax: 'Taxe'
         tax_id: 'Taxe'
@@ -2097,7 +2102,7 @@ fra:
         created_at: 'Créé le'
         creator: 'Créateur'
         creator_id: 'Créateur'
-        draft_mode: 'Mode brouillard'
+        draft_mode: 'Mode brouillard' #?
         embankable_payments: 'Règlements encaissables'
         entities: 'Personnes'
         id: 'ID'
