--- a/config/locales/jpn/general.yml
+++ b/config/locales/jpn/general.yml
@@ -97,7 +97,7 @@ jpn:
     #>letter_introduction: 'Suite à notre conversation, je vous communique les éléments du devis.'
     #>lock: 'Verrouiller'
     #>mail: 'Envoyer un courriel'
-    #>n: 'non'
+    #>n: 'Non'
     #>new: 'Nouveau...'
     #>next: 'Suivant'
     #>no_records: 'Pas d''enregistrements'
@@ -128,7 +128,7 @@ jpn:
     #>update: 'Modifier'
     #>validate: 'Valider'
     #>view: 'Affichage'
-    #>y: 'oui'
+    #>y: 'Oui'
   indicator: 'ボード' #!
   information: '情報' #!
   models:
@@ -351,6 +351,8 @@ jpn:
         #>stocks: 'État des stocks'
         #>transport: 'Transport'
       #>unvalid_nature: 'Votre type de modèle est incorrect. Vous devriez supprimer ce modèle et le réinstaller.'
+    embankment:
+      #>to_accountancy: '[{{resource}} {{number}}] {{detail}}'
     entity:
       #>client: 'Client'
       #>supplier: 'Fournisseur'
