--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -371,6 +371,7 @@ spa:
         name: 'Nombre'
         #>prices: 'Prix'
         #>rate: 'Taux de change'
+        #>symbol: 'Symbole'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
@@ -569,6 +570,9 @@ spa:
         #>embanker: 'Encaisseur'
         #>embanker_id: 'Encaisseur'
         #>id: 'ID'
+        #>journal_record: 'Pièces comptables'
+        #>journal_record_id: 'Pièce comptable'
+        #>journal_records: 'Pièces comptables'
         #>lock_version: 'Version'
         #>locked: 'Verrouillé'
         #>mode: 'Type de paiement'
@@ -1621,6 +1625,7 @@ spa:
         #>reduction: 'Ligne de réduction'
         #>reduction_origin: 'Ligne soumise à réduction'
         #>reduction_origin_id: 'Ligne soumise à réduction'
+        #>reduction_percent: 'Pourcentage de réduction'
         #>reductions: 'Lignes de réductions'
         #>tax: 'Taxe'
         #>tax_id: 'Taxe'
