--- a/config/locales/fra/pack.accountancy.yml
+++ b/config/locales/fra/pack.accountancy.yml
@@ -154,13 +154,13 @@ fra:
           zero: 'Aucune écriture'
         title: 'Comptabilité générale'
       journal:
-        balance: 'Soldes' #!
+        balance: 'Solde'
         credit: 'Crédit' #!
         debit: 'Débit' #!
         journal_update: 'Modifier le journal'
         search: 'Rechercher des pièces/écritures' #!
         title: 'Journal : {{name}} ({{code}})'
-        totals: 'Totaux' #!
+        totals: 'Totaux (pièces validées et brouillard)'
         #>journal_record_create: # Potentially missing translation
       journal_close:
         close: 'Clôturer le journal'
@@ -212,15 +212,15 @@ fra:
         dates: 'Saisissez les dates de début et de fin de la période'
         from: 'Période du'
         to: 'Au'
-      # Unfound view ./app/views/accountancy/_print_balance_sheet
-      _print_balance_sheet:
-        balance_sheet: 'Sélectionnez l''exercice'
-        select_financialyear: 'Exercice'
       # No defined action for this view !!!
       # Unfound view ./app/views/accountancy/print_balance_sheet
       print_balance_sheet:
         period: 'Période'
         title: 'Impression du bilan'
+      # Unfound view ./app/views/accountancy/_print_balance_sheet
+      _print_balance_sheet:
+        balance_sheet: 'Sélectionnez l''exercice'
+        select_financialyear: 'Exercice'
       # No defined action for this view !!!
       # Unfound view ./app/views/accountancy/print_by_financial_year
       print_by_financial_year:
