Fixes ome stuff add add various thirs in suppliers setting
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1530 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -1773,6 +1773,7 @@ fra:
         dest_contact: 'Adresse de livraison'
         dest_contact_id: 'Adresse de livraison'
         id: 'ID'
+        journal_record_id: 'Pièce comptable'
         label: 'Commande'
         lines: 'Lignes d''achat'
         lock_version: 'Version'
