--- a/config/locales/jpn/parameters.yml
+++ b/config/locales/jpn/parameters.yml
@@ -5,21 +5,22 @@ jpn:
         #>automatic: 'Activer la bascule automatique des données comptables'
         #>draft_mode: 'Enregistrer les pièces dans le brouillard lors de la bascule automatique'
       accounts:
-        #>acquisition_taxes: 'Compte des taxes d''acquisitions intracommunautaires'
-        #>assimilated_taxes: 'Compte des taxes assimilées'
-        #>balance_taxes: 'Compte de taxe net '
-        #>banks: 'Comptes de banque'
-        #>cashes: 'Comptes de caisse'
+        #>capital_gains: 'Résultat de l''exercice (bénéfice)'
+        #>capital_losses: 'Résultat de l''exercice (perte)'
         #>charges: 'Comptes de charges'
-        #>clients: 'Comptes clients'
-        #>collected_taxes: 'Compte des taxes collectées'
-        #>gains: 'Résultat de l''exercice (bénéfice)'
-        #>losses: 'Résultat de l''exercice (perte)'
-        #>paid_taxes: 'Compte des taxes déductibles'
-        #>payback_taxes: 'Compte de taxes de remboursement'
+        #>financial_banks: 'Comptes de banque'
+        #>financial_cashes: 'Comptes de caisse'
+        #>financial_payments_to_embank: 'Règlements à encaisser'
         #>products: 'Comptes de produits'
-        #>suppliers: 'Comptes fournisseurs'
-        #>taxes: 'Comptes taxes'
+        #>taxes_acquisition: 'Compte des taxes d''acquisitions intracommunautaires'
+        #>taxes_assimilated: 'Compte des taxes assimilées'
+        #>taxes_balance: 'Compte de taxe net '
+        #>taxes_collected: 'Compte des taxes collectées'
+        #>taxes_paid: 'Compte des taxes déductibles'
+        #>taxes_payback: 'Compte de taxes de remboursement'
+        #>third_clients: 'Comptes clients'
+        #>third_suppliers: 'Comptes fournisseurs'
+        #>third_various: 'Débiteurs divers et créditeurs divers'
       default_journals:
       journals:
         #>bank: 'Journal de banque par défaut'
