--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -1404,6 +1404,7 @@ spa:
         #>dest_contact: 'Adresse de livraison'
         #>dest_contact_id: 'Adresse de livraison'
         #>id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>label: 'Commande'
         #>lines: 'Lignes d''achat'
         #>lock_version: 'Version'
