--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -1411,6 +1411,7 @@ eng:
         #>dest_contact: 'Adresse de livraison'
         #>dest_contact_id: 'Adresse de livraison'
         id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>label: 'Commande'
         #>lines: 'Lignes d''achat'
         lock_version: 'Version'
