--- a/config/locales/eng/pack.relations.yml
+++ b/config/locales/eng/pack.relations.yml
@@ -236,8 +236,9 @@ eng:
       entity_create:
         #>title: 'Création d''une nouvelle fiche client/fournisseur'
       _entity_form:
-        #>account_client_to_create: '--Créer automatiquement un compte client--'
-        #>account_supplier_to_create: '--Créer automatiquement un compte fournisseur--'
+        #>account_client_to_create: '-- Créer automatiquement un compte client --'
+        #>account_supplier_to_create: '-- Créer automatiquement un compte fournisseur --'
+        #>account_third_to_create: '-- Créer automatiquement un compte divers --'
         #>client: 'Informations client'
         #>complements: 'Champs personnalisés'
         #>details: 'Informations complémentaires'
